--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 0bd5d162
+	base = 71157858
 	trim = etsi_its_conversion/etsi_its_conversion
-	trimbase = 
+	trimbase = 0bd5d162
