--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 3e70036f
+	base = 319b0db6
 	trim = etsi_its_conversion/etsi_its_denm_conversion
-	trimbase = 
+	trimbase = 3e70036f
