--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 5dd8dc16
+	base = 6bccb138
 	trim = etsi_its_conversion/etsi_its_cpm_ts_conversion
-	trimbase = 
+	trimbase = 5dd8dc16
