--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = fa6bd329
+	base = 536aaf9e
 	trim = etsi_its_conversion/etsi_its_cam_conversion
-	trimbase = 
+	trimbase = fa6bd329
