--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e5e1fdab
 	base = 5afd9f95
 	trim = etsi_its_conversion/etsi_its_mapem_ts_conversion
-	trimbase = 67533160
+	trimbase = 
