--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 2fb87003
+	base = aa6d2002
 	trim = etsi_its_conversion/etsi_its_mapem_ts_conversion
-	trimbase = 
+	trimbase = 2fb87003
