--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 5b2712f4
+	base = 97698c21
 	trim = etsi_its_conversion/etsi_its_spatem_ts_conversion
-	trimbase = 
+	trimbase = 5b2712f4
