--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 72c6c42a
-	trim = 
-	trimbase = 
+	base = 26dc759e
+	trim = etsi_its_conversion/etsi_its_denm_ts_conversion
+	trimbase = 72c6c42a
