--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 977bf300
+	base = 33cc74b0
 	trim = etsi_its_msgs_utils
-	trimbase = 
+	trimbase = 977bf300
