--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = c0b50b80
+	base = a4c28f48
 	trim = etsi_its_coding/etsi_its_cpm_ts_coding
-	trimbase = 
+	trimbase = c0b50b80
