--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = ce015b45
+	base = 68b85e3c
 	trim = etsi_its_coding/etsi_its_mapem_ts_coding
-	trimbase = 
+	trimbase = ce015b45
