--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = d90c3c04
+	base = 30b847e7
 	trim = etsi_its_coding/etsi_its_coding
-	trimbase = 
+	trimbase = d90c3c04
