--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 8130f455
-	trim = 
-	trimbase = 
+	base = 7a634f3b
+	trim = etsi_its_coding/etsi_its_denm_ts_coding
+	trimbase = 8130f455
