--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 28af81a5
+	base = ccb60df3
 	trim = etsi_its_coding/etsi_its_spatem_ts_coding
-	trimbase = 
+	trimbase = 28af81a5
