--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 43f07475
+	base = 9a993131
 	trim = etsi_its_coding/etsi_its_vam_ts_coding
-	trimbase = 
+	trimbase = 43f07475
