--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 4eea529c
+	base = b387e60c
 	trim = etsi_its_coding/etsi_its_denm_coding
-	trimbase = 
+	trimbase = 4eea529c
