--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = f4a1b652
+	base = 86c82c38
 	trim = etsi_its_coding/etsi_its_cam_coding
-	trimbase = 
+	trimbase = f4a1b652
