--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 1ff5d15a
+	base = cda94820
 	trim = etsi_its_coding/etsi_its_cam_ts_coding
-	trimbase = 
+	trimbase = 1ff5d15a
