--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 4e1e2731
+	base = dab30239
 	trim = etsi_its_rviz_plugins
-	trimbase = 
+	trimbase = 4e1e2731
