--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = f288b512
+	base = c4ee552a
 	trim = etsi_its_msgs/etsi_its_spatem_ts_msgs
-	trimbase = 
+	trimbase = f288b512
