--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 32b49c71
+	base = ff5ce481
 	trim = etsi_its_msgs/etsi_its_cam_msgs
-	trimbase = 
+	trimbase = 32b49c71
