--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 0804d45c
+	base = 3a358bf7
 	trim = etsi_its_msgs/etsi_its_mapem_ts_msgs
-	trimbase = 
+	trimbase = 0804d45c
