--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 40e9fe8d
+	base = 37a66f71
 	trim = etsi_its_msgs/etsi_its_cpm_ts_msgs
-	trimbase = 
+	trimbase = 40e9fe8d
