--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 7831a04b
+	base = 9f420b9c
 	trim = etsi_its_msgs/etsi_its_vam_ts_msgs
-	trimbase = 
+	trimbase = 7831a04b
