--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = ea2373f9
+	base = 6cdcfc68
 	trim = etsi_its_msgs/etsi_its_msgs
-	trimbase = 
+	trimbase = ea2373f9
