--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 4afd70d9
-	trim = 
-	trimbase = 
+	base = 9d9a327c
+	trim = etsi_its_msgs/etsi_its_denm_ts_msgs
+	trimbase = 4afd70d9
