--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 146836f3
+	base = 327f330f
 	trim = etsi_its_msgs/etsi_its_cam_ts_msgs
-	trimbase = 
+	trimbase = 146836f3
