--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 609b5631
+	base = 6dcf756e
 	trim = etsi_its_msgs/etsi_its_denm_msgs
-	trimbase = 
+	trimbase = 609b5631
