--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/etsi_its_denm_ts_conversion
-	previous = 
-	base = 26dc759e
+	previous = 26dc759e
+	base = 2cbcc15b
 	trim = 
 	trimbase = 
