--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/etsi_its_denm_ts_msgs
-	previous = 
-	base = 9d9a327c
+	previous = 9d9a327c
+	base = a213113e
 	trim = 
 	trimbase = 
