--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/etsi_its_denm_ts_msgs
-	previous = 
-	base = 8463a957
+	previous = 8463a957
+	base = f7ba8857
 	trim = 
 	trimbase = 
