--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/etsi_its_denm_ts_coding
-	previous = 
-	base = 7a634f3b
+	previous = 7a634f3b
+	base = 6d3e9261
 	trim = 
 	trimbase = 
