--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/etsi_its_denm_ts_coding
-	previous = 
-	base = f7a89a12
+	previous = f7a89a12
+	base = f331a122
 	trim = 
 	trimbase = 
