--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/etsi_its_denm_ts_coding
-	previous = 
-	base = bf73dc22
+	previous = bf73dc22
+	base = e69f8221
 	trim = 
 	trimbase = 
