--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/etsi_its_denm_ts_conversion
-	previous = 
-	base = ef9a7940
+	previous = ef9a7940
+	base = 9bab2b6c
 	trim = 
 	trimbase = 
