--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/etsi_its_denm_ts_msgs
-	previous = 
-	base = 96bebf4d
+	previous = 96bebf4d
+	base = 8cbcad5b
 	trim = 
 	trimbase = 
