--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = ed9ba17c
+	base = 9a29a36d
 	trim = etsi_its_messages
-	trimbase = 
+	trimbase = ed9ba17c
