--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 18f7e4a8
+	base = 40e6e148
 	trim = etsi_its_conversion/etsi_its_vam_ts_conversion
-	trimbase = 
+	trimbase = 18f7e4a8
