--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 64fee51d
+	base = 4a60ecf7
 	trim = etsi_its_conversion/etsi_its_cam_ts_conversion
-	trimbase = 
+	trimbase = 64fee51d
