--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e5e1fdab
 	base = 2bf77bec
 	trim = etsi_its_conversion/etsi_its_primitives_conversion
-	trimbase = fb5e0d2a
+	trimbase = 
