--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 8dba81ab
+	base = 323f7b14
 	trim = etsi_its_conversion/etsi_its_primitives_conversion
-	trimbase = 
+	trimbase = 8dba81ab
