--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = e1661034
+	base = 391a0ab9
 	trim = etsi_its_conversion/etsi_its_conversion
-	trimbase = 
+	trimbase = e1661034
