--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = f10cc5a2
+	base = 478ab54b
 	trim = etsi_its_conversion/etsi_its_denm_conversion
-	trimbase = 
+	trimbase = f10cc5a2
