--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 0010bceb
+	base = b4669481
 	trim = etsi_its_conversion/etsi_its_cpm_ts_conversion
-	trimbase = 
+	trimbase = 0010bceb
