--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 40c30aa8
+	base = 6bf04ee8
 	trim = etsi_its_conversion/etsi_its_cam_conversion
-	trimbase = 
+	trimbase = 40c30aa8
