--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e5e1fdab
 	base = a76907db
 	trim = etsi_its_conversion/etsi_its_mapem_ts_conversion
-	trimbase = b2068448
+	trimbase = 
