--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 078a1312
+	base = 084f463b
 	trim = etsi_its_conversion/etsi_its_mapem_ts_conversion
-	trimbase = 
+	trimbase = 078a1312
