--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e5e1fdab
 	base = 3fbcc1e4
 	trim = etsi_its_conversion/etsi_its_spatem_ts_conversion
-	trimbase = 091edea8
+	trimbase = 
