--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 64a22458
+	base = f2fc86a2
 	trim = etsi_its_conversion/etsi_its_spatem_ts_conversion
-	trimbase = 
+	trimbase = 64a22458
