--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = d47e076f
-	trim = 
-	trimbase = 
+	base = 56536108
+	trim = etsi_its_conversion/etsi_its_denm_ts_conversion
+	trimbase = d47e076f
