--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 75fe7b1b
+	base = a8353bf7
 	trim = etsi_its_msgs_utils
-	trimbase = 
+	trimbase = 75fe7b1b
