--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 4b1ced60
+	base = 21faf8b9
 	trim = etsi_its_coding/etsi_its_cpm_ts_coding
-	trimbase = 
+	trimbase = 4b1ced60
