--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 34762bc2
+	base = 13dcfa7b
 	trim = etsi_its_coding/etsi_its_mapem_ts_coding
-	trimbase = 
+	trimbase = 34762bc2
