--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = b7876f44
+	base = fa04a6c6
 	trim = etsi_its_coding/etsi_its_coding
-	trimbase = 
+	trimbase = b7876f44
