--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 202d5f8d
-	trim = 
-	trimbase = 
+	base = 63d2e0da
+	trim = etsi_its_coding/etsi_its_denm_ts_coding
+	trimbase = 202d5f8d
