--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = c1565a6e
+	base = bd93ede8
 	trim = etsi_its_coding/etsi_its_spatem_ts_coding
-	trimbase = 
+	trimbase = c1565a6e
