--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = c85ab784
+	base = bb1d6d6c
 	trim = etsi_its_coding/etsi_its_vam_ts_coding
-	trimbase = 
+	trimbase = c85ab784
