--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = a2cf8faa
+	base = 4e1f5cb3
 	trim = etsi_its_coding/etsi_its_denm_coding
-	trimbase = 
+	trimbase = a2cf8faa
