--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = f73ac4ae
+	base = 0b0eee73
 	trim = etsi_its_coding/etsi_its_cam_coding
-	trimbase = 
+	trimbase = f73ac4ae
