--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = f615a119
+	base = 17f4e867
 	trim = etsi_its_coding/etsi_its_cam_ts_coding
-	trimbase = 
+	trimbase = f615a119
