--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = f30f48bc
+	base = e9f3298f
 	trim = etsi_its_rviz_plugins
-	trimbase = 
+	trimbase = f30f48bc
