--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 62d857db
+	base = 5286a926
 	trim = etsi_its_msgs/etsi_its_spatem_ts_msgs
-	trimbase = 
+	trimbase = 62d857db
