--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 56e64442
+	base = 72f8b7b4
 	trim = etsi_its_msgs/etsi_its_cam_msgs
-	trimbase = 
+	trimbase = 56e64442
