--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 3b961105
+	base = c435923d
 	trim = etsi_its_msgs/etsi_its_mapem_ts_msgs
-	trimbase = 
+	trimbase = 3b961105
