--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 86c70146
+	base = 1542cd07
 	trim = etsi_its_msgs/etsi_its_cpm_ts_msgs
-	trimbase = 
+	trimbase = 86c70146
