--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = a62ae5e0
+	base = eaa2bcde
 	trim = etsi_its_msgs/etsi_its_vam_ts_msgs
-	trimbase = 
+	trimbase = a62ae5e0
