--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = b95ca1e4
+	base = 3c518eac
 	trim = etsi_its_msgs/etsi_its_msgs
-	trimbase = 
+	trimbase = b95ca1e4
