--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = 71fd10dd
-	trim = 
-	trimbase = 
+	base = bc78403c
+	trim = etsi_its_msgs/etsi_its_denm_ts_msgs
+	trimbase = 71fd10dd
