--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = ac3c0294
+	base = 5a359ca3
 	trim = etsi_its_msgs/etsi_its_cam_ts_msgs
-	trimbase = 
+	trimbase = ac3c0294
