--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 408ee185
-	base = c8711cbd
+	base = 06cd070f
 	trim = etsi_its_msgs/etsi_its_denm_msgs
-	trimbase = 
+	trimbase = c8711cbd
