--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/etsi_its_denm_ts_msgs
-	previous = 
-	base = e9444864
+	previous = e9444864
+	base = 4e80c856
 	trim = 
 	trimbase = 
