--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/etsi_its_denm_ts_coding
-	previous = 
-	base = cc1e89c9
+	previous = cc1e89c9
+	base = 7c2e7230
 	trim = 
 	trimbase = 
