--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/etsi_its_denm_ts_conversion
-	previous = 
-	base = 56536108
+	previous = 56536108
+	base = e54e8337
 	trim = 
 	trimbase = 
