--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/etsi_its_denm_ts_conversion
-	previous = 
-	base = 30f9512a
+	previous = 30f9512a
+	base = f6a739f6
 	trim = 
 	trimbase = 
