--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/etsi_its_denm_ts_coding
-	previous = 
-	base = 95137ffe
+	previous = 95137ffe
+	base = cbf7663d
 	trim = 
 	trimbase = 
