--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/etsi_its_denm_ts_conversion
-	previous = 
-	base = 618825fb
+	previous = 618825fb
+	base = 0a437a23
 	trim = 
 	trimbase = 
