--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/etsi_its_denm_ts_msgs
-	previous = 
-	base = 4a794a64
+	previous = 4a794a64
+	base = 8657a260
 	trim = 
 	trimbase = 
