--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.0.0-1": ["Wed Dec 18 2024", "Jean-Pierre Busch", "jean-pierre.busch@rwth-aachen.de"]}
+{"3.1.0-1": ["Wed Mar 05 2025", "Jean-Pierre Busch", "jean-pierre.busch@rwth-aachen.de"], "3.0.0-1": ["Wed Dec 18 2024", "Jean-Pierre Busch", "jean-pierre.busch@rwth-aachen.de"]}
