--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/etsi_its_denm_ts_msgs
-	previous = 
-	base = bc78403c
+	previous = bc78403c
+	base = 138dc0ae
 	trim = 
 	trimbase = 
