--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/etsi_its_denm_ts_msgs
-	previous = 
-	base = 91b3c280
+	previous = 91b3c280
+	base = cfb31afa
 	trim = 
 	trimbase = 
