--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/etsi_its_denm_ts_conversion
-	previous = 
-	base = 8540c0ea
+	previous = 8540c0ea
+	base = fddd50c8
 	trim = 
 	trimbase = 
