--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/etsi_its_denm_ts_coding
-	previous = 
-	base = ccc9be3e
+	previous = ccc9be3e
+	base = 0a0b5a3d
 	trim = 
 	trimbase = 
