--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 697f03e9
+	base = b9975d43
 	trim = etsi_its_rviz_plugins
-	trimbase = 
+	trimbase = 697f03e9
