--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 81f967c3
+	base = b9bbae50
 	trim = etsi_its_msgs_utils
-	trimbase = 
+	trimbase = 81f967c3
