--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = d7ed2501
+	base = 8561978f
 	trim = etsi_its_msgs/etsi_its_vam_ts_msgs
-	trimbase = 
+	trimbase = d7ed2501
