--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 97d17c51
+	base = 1a12751a
 	trim = etsi_its_msgs/etsi_its_spatem_ts_msgs
-	trimbase = 
+	trimbase = 97d17c51
