--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 9da930b9
+	base = 07e680d7
 	trim = etsi_its_msgs/etsi_its_msgs
-	trimbase = 
+	trimbase = 9da930b9
