--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = d170198d
-	trim = 
-	trimbase = 
+	base = 46efacce
+	trim = etsi_its_msgs/etsi_its_mcm_uulm_msgs
+	trimbase = d170198d
