--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = ebe3aa1a
+	base = af2f3432
 	trim = etsi_its_msgs/etsi_its_mapem_ts_msgs
-	trimbase = 
+	trimbase = ebe3aa1a
