--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = cdbde556
+	base = 03e53e13
 	trim = etsi_its_msgs/etsi_its_denm_ts_msgs
-	trimbase = 
+	trimbase = cdbde556
