--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = beadadb1
+	base = 337b375b
 	trim = etsi_its_msgs/etsi_its_denm_msgs
-	trimbase = 
+	trimbase = beadadb1
