--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 6dce1307
+	base = ff3b7696
 	trim = etsi_its_msgs/etsi_its_cpm_ts_msgs
-	trimbase = 
+	trimbase = 6dce1307
