--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = e10d21c9
+	base = 5145f4c0
 	trim = etsi_its_msgs/etsi_its_cam_ts_msgs
-	trimbase = 
+	trimbase = e10d21c9
