--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 0de8ae2d
+	base = b132c7fb
 	trim = etsi_its_msgs/etsi_its_cam_msgs
-	trimbase = 
+	trimbase = 0de8ae2d
