--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 01300708
+	base = 13538ea7
 	trim = etsi_its_messages
-	trimbase = 
+	trimbase = 01300708
