--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 83f6c7ea
+	base = ba412158
 	trim = etsi_its_conversion/etsi_its_vam_ts_conversion
-	trimbase = 
+	trimbase = 83f6c7ea
