--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 408ee185
 	base = 97698c21
 	trim = etsi_its_conversion/etsi_its_spatem_ts_conversion
-	trimbase = 5b2712f4
+	trimbase = 
