--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = d19747ca
+	base = 3703233d
 	trim = etsi_its_conversion/etsi_its_spatem_ts_conversion
-	trimbase = 
+	trimbase = d19747ca
