--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 408ee185
 	base = 603335d8
 	trim = etsi_its_conversion/etsi_its_primitives_conversion
-	trimbase = 54364394
+	trimbase = 
