--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = b3e42e3f
+	base = ee5c6d06
 	trim = etsi_its_conversion/etsi_its_primitives_conversion
-	trimbase = 
+	trimbase = b3e42e3f
