--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = eb0d8493
-	trim = 
-	trimbase = 
+	base = 60ee3e60
+	trim = etsi_its_conversion/etsi_its_mcm_uulm_conversion
+	trimbase = eb0d8493
