--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 408ee185
 	base = aa6d2002
 	trim = etsi_its_conversion/etsi_its_mapem_ts_conversion
-	trimbase = 2fb87003
+	trimbase = 
