--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 3ee995ea
+	base = bce153e5
 	trim = etsi_its_conversion/etsi_its_mapem_ts_conversion
-	trimbase = 
+	trimbase = 3ee995ea
