--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 6874f84e
+	base = 0a799500
 	trim = etsi_its_conversion/etsi_its_denm_ts_conversion
-	trimbase = 
+	trimbase = 6874f84e
