--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = e05f17f4
+	base = 2ca5c47d
 	trim = etsi_its_conversion/etsi_its_denm_conversion
-	trimbase = 
+	trimbase = e05f17f4
