--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = c016f8d0
+	base = 513d5d77
 	trim = etsi_its_conversion/etsi_its_cpm_ts_conversion
-	trimbase = 
+	trimbase = c016f8d0
