--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = d0f5f5e2
+	base = 544695b1
 	trim = etsi_its_conversion/etsi_its_conversion
-	trimbase = 
+	trimbase = d0f5f5e2
