--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = d844a72c
+	base = 7af441c5
 	trim = etsi_its_conversion/etsi_its_cam_ts_conversion
-	trimbase = 
+	trimbase = d844a72c
