--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = ed0024ce
+	base = 2f40eaa1
 	trim = etsi_its_conversion/etsi_its_cam_conversion
-	trimbase = 
+	trimbase = ed0024ce
