--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 4b52786a
+	base = 90564feb
 	trim = etsi_its_coding/etsi_its_vam_ts_coding
-	trimbase = 
+	trimbase = 4b52786a
