--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = a801bbf7
+	base = 7ea552b3
 	trim = etsi_its_coding/etsi_its_spatem_ts_coding
-	trimbase = 
+	trimbase = a801bbf7
