--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 9e5957da
-	trim = 
-	trimbase = 
+	base = 8c0f5e8d
+	trim = etsi_its_coding/etsi_its_mcm_uulm_coding
+	trimbase = 9e5957da
