--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = b098e1fa
+	base = 0201aaa2
 	trim = etsi_its_coding/etsi_its_mapem_ts_coding
-	trimbase = 
+	trimbase = b098e1fa
