--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = dd897b24
+	base = 1db99ce0
 	trim = etsi_its_coding/etsi_its_denm_ts_coding
-	trimbase = 
+	trimbase = dd897b24
