--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 0f2138cc
+	base = 05742cbb
 	trim = etsi_its_coding/etsi_its_denm_coding
-	trimbase = 
+	trimbase = 0f2138cc
