--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = d709edba
+	base = dcb4ed4b
 	trim = etsi_its_coding/etsi_its_cpm_ts_coding
-	trimbase = 
+	trimbase = d709edba
