--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 5a780689
+	base = 0d99cc29
 	trim = etsi_its_coding/etsi_its_coding
-	trimbase = 
+	trimbase = 5a780689
