--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 4ff53abb
+	base = dd9299b5
 	trim = etsi_its_coding/etsi_its_cam_ts_coding
-	trimbase = 
+	trimbase = 4ff53abb
