--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 0f5b7496
+	base = 8cfe50da
 	trim = etsi_its_coding/etsi_its_cam_coding
-	trimbase = 
+	trimbase = 0f5b7496
