--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/etsi_its_mcm_uulm_conversion
-	previous = 
-	base = 60ee3e60
+	previous = 60ee3e60
+	base = 655c5838
 	trim = 
 	trimbase = 
