--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/etsi_its_mcm_uulm_conversion
-	previous = 
-	base = 322c78bb
+	previous = 322c78bb
+	base = 3283393e
 	trim = 
 	trimbase = 
