--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/etsi_its_mcm_uulm_coding
-	previous = 
-	base = e77de4f8
+	previous = e77de4f8
+	base = 17c69b61
 	trim = 
 	trimbase = 
