--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/etsi_its_mcm_uulm_msgs
-	previous = 
-	base = 46efacce
+	previous = 46efacce
+	base = 6b519bea
 	trim = 
 	trimbase = 
