--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/etsi_its_mcm_uulm_msgs
-	previous = 
-	base = d10f80c8
+	previous = d10f80c8
+	base = 91c894c6
 	trim = 
 	trimbase = 
