--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/etsi_its_mcm_uulm_coding
-	previous = 
-	base = ca0c9e9a
+	previous = ca0c9e9a
+	base = 50b31b6b
 	trim = 
 	trimbase = 
