--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/etsi_its_mcm_uulm_msgs
-	previous = 
-	base = 2ae5cc93
+	previous = 2ae5cc93
+	base = e89b1c9d
 	trim = 
 	trimbase = 
