--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 1f00a47a
+	base = 8ea09bcc
 	trim = etsi_its_rviz_plugins
-	trimbase = 
+	trimbase = 1f00a47a
