--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = e338ca58
+	base = 33dd4c46
 	trim = etsi_its_msgs_utils
-	trimbase = 
+	trimbase = e338ca58
