--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = cb3dde51
+	base = 4c459796
 	trim = etsi_its_msgs/etsi_its_vam_ts_msgs
-	trimbase = 
+	trimbase = cb3dde51
