--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = ab46a3bb
+	base = c3894f6a
 	trim = etsi_its_msgs/etsi_its_spatem_ts_msgs
-	trimbase = 
+	trimbase = ab46a3bb
