--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = f0c461a9
+	base = 623550cf
 	trim = etsi_its_msgs/etsi_its_msgs
-	trimbase = 
+	trimbase = f0c461a9
