--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 7ff3a73d
-	trim = 
-	trimbase = 
+	base = 865d89db
+	trim = etsi_its_msgs/etsi_its_mcm_uulm_msgs
+	trimbase = 7ff3a73d
