--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = ba29a298
+	base = 12d6a873
 	trim = etsi_its_msgs/etsi_its_mapem_ts_msgs
-	trimbase = 
+	trimbase = ba29a298
