--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 06241876
+	base = 6456f185
 	trim = etsi_its_msgs/etsi_its_denm_ts_msgs
-	trimbase = 
+	trimbase = 06241876
