--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 245b3094
+	base = 9a22248c
 	trim = etsi_its_msgs/etsi_its_denm_msgs
-	trimbase = 
+	trimbase = 245b3094
