--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = a5fcbbd2
+	base = 0f073b43
 	trim = etsi_its_msgs/etsi_its_cpm_ts_msgs
-	trimbase = 
+	trimbase = a5fcbbd2
