--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = ae408967
+	base = f6daf0c3
 	trim = etsi_its_msgs/etsi_its_cam_ts_msgs
-	trimbase = 
+	trimbase = ae408967
