--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 59f9e38f
+	base = c5c65fa0
 	trim = etsi_its_msgs/etsi_its_cam_msgs
-	trimbase = 
+	trimbase = 59f9e38f
