--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 3331b608
+	base = 0e276dc4
 	trim = etsi_its_messages
-	trimbase = 
+	trimbase = 3331b608
