--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 9f20fa4d
+	base = cc4412ab
 	trim = etsi_its_conversion/etsi_its_vam_ts_conversion
-	trimbase = 
+	trimbase = 9f20fa4d
