--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 408ee185
 	base = f2fc86a2
 	trim = etsi_its_conversion/etsi_its_spatem_ts_conversion
-	trimbase = 64a22458
+	trimbase = 
