--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = dcff3769
+	base = 00ee3cf6
 	trim = etsi_its_conversion/etsi_its_spatem_ts_conversion
-	trimbase = 
+	trimbase = dcff3769
