--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 408ee185
 	base = 323f7b14
 	trim = etsi_its_conversion/etsi_its_primitives_conversion
-	trimbase = 8dba81ab
+	trimbase = 
