--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = c6f44cba
+	base = 21769a21
 	trim = etsi_its_conversion/etsi_its_primitives_conversion
-	trimbase = 
+	trimbase = c6f44cba
