--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 58699785
-	trim = 
-	trimbase = 
+	base = c9a84174
+	trim = etsi_its_conversion/etsi_its_mcm_uulm_conversion
+	trimbase = 58699785
