--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 408ee185
 	base = 084f463b
 	trim = etsi_its_conversion/etsi_its_mapem_ts_conversion
-	trimbase = 078a1312
+	trimbase = 
