--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 0036fc41
+	base = 6b2b09a8
 	trim = etsi_its_conversion/etsi_its_mapem_ts_conversion
-	trimbase = 
+	trimbase = 0036fc41
