--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 6833d0aa
+	base = 68f4a05d
 	trim = etsi_its_conversion/etsi_its_denm_ts_conversion
-	trimbase = 
+	trimbase = 6833d0aa
