--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 1623e1c0
+	base = f8698215
 	trim = etsi_its_conversion/etsi_its_denm_conversion
-	trimbase = 
+	trimbase = 1623e1c0
