--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = ad5c73e1
+	base = 80c8931d
 	trim = etsi_its_conversion/etsi_its_cpm_ts_conversion
-	trimbase = 
+	trimbase = ad5c73e1
