--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 824747ee
+	base = b464dc6d
 	trim = etsi_its_conversion/etsi_its_conversion
-	trimbase = 
+	trimbase = 824747ee
