--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = ce6f55f4
+	base = f6e4606b
 	trim = etsi_its_conversion/etsi_its_cam_ts_conversion
-	trimbase = 
+	trimbase = ce6f55f4
