--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = ead5d4a9
+	base = 7a7d24bb
 	trim = etsi_its_conversion/etsi_its_cam_conversion
-	trimbase = 
+	trimbase = ead5d4a9
