--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = e97731b6
+	base = 522dc624
 	trim = etsi_its_coding/etsi_its_vam_ts_coding
-	trimbase = 
+	trimbase = e97731b6
