--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 2c07fae6
+	base = 1afffb15
 	trim = etsi_its_coding/etsi_its_spatem_ts_coding
-	trimbase = 
+	trimbase = 2c07fae6
