--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = f562e764
-	trim = 
-	trimbase = 
+	base = 4baa8d7d
+	trim = etsi_its_coding/etsi_its_mcm_uulm_coding
+	trimbase = f562e764
