--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 254c663f
+	base = 2e7a56cf
 	trim = etsi_its_coding/etsi_its_mapem_ts_coding
-	trimbase = 
+	trimbase = 254c663f
