--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 6cf10c1a
+	base = d3730610
 	trim = etsi_its_coding/etsi_its_denm_ts_coding
-	trimbase = 
+	trimbase = 6cf10c1a
