--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = f4928739
+	base = 8d1e5fe8
 	trim = etsi_its_coding/etsi_its_denm_coding
-	trimbase = 
+	trimbase = f4928739
