--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = a036d64e
+	base = 2d2a3ca6
 	trim = etsi_its_coding/etsi_its_cpm_ts_coding
-	trimbase = 
+	trimbase = a036d64e
