--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = 24ad8019
+	base = cc185f0a
 	trim = etsi_its_coding/etsi_its_coding
-	trimbase = 
+	trimbase = 24ad8019
