--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = a70afe11
+	base = abf2889e
 	trim = etsi_its_coding/etsi_its_cam_ts_coding
-	trimbase = 
+	trimbase = a70afe11
