--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c056e91
-	base = ba999b3e
+	base = 8b3af3df
 	trim = etsi_its_coding/etsi_its_cam_coding
-	trimbase = 
+	trimbase = ba999b3e
