--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/etsi_its_mcm_uulm_conversion
-	previous = 
-	base = c9a84174
+	previous = c9a84174
+	base = 5c42cd14
 	trim = 
 	trimbase = 
