--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/etsi_its_mcm_uulm_conversion
-	previous = 
-	base = c78acdd5
+	previous = c78acdd5
+	base = 613dabf2
 	trim = 
 	trimbase = 
