--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/etsi_its_mcm_uulm_coding
-	previous = 
-	base = b92bb0f3
+	previous = b92bb0f3
+	base = 08611ec9
 	trim = 
 	trimbase = 
