--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/etsi_its_mcm_uulm_msgs
-	previous = 
-	base = 865d89db
+	previous = 865d89db
+	base = a6b8d6cf
 	trim = 
 	trimbase = 
