--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/etsi_its_mcm_uulm_msgs
-	previous = 
-	base = c3f93a57
+	previous = c3f93a57
+	base = f4f21bd3
 	trim = 
 	trimbase = 
