--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/etsi_its_mcm_uulm_conversion
-	previous = 
-	base = 77f7fcce
+	previous = 77f7fcce
+	base = 78222673
 	trim = 
 	trimbase = 
