--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/etsi_its_mcm_uulm_msgs
-	previous = 
-	base = 80bc665b
+	previous = 80bc665b
+	base = 7198293e
 	trim = 
 	trimbase = 
