--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/etsi_its_mcm_uulm_coding
-	previous = 
-	base = b0557460
+	previous = b0557460
+	base = b5e538f0
 	trim = 
 	trimbase = 
