--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/etsi_its_mcm_uulm_coding
-	previous = 
-	base = 4baa8d7d
+	previous = 4baa8d7d
+	base = a7017404
 	trim = 
 	trimbase = 
