--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/etsi_its_mcm_uulm_coding
-	previous = 
-	base = 0cce2bcc
+	previous = 0cce2bcc
+	base = db9fe151
 	trim = 
 	trimbase = 
