--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/etsi_its_mcm_uulm_conversion
-	previous = 
-	base = ae8680ed
+	previous = ae8680ed
+	base = fe874040
 	trim = 
 	trimbase = 
